--- a/app/scripts/views/hakemus/seuranta-forms.html
+++ b/app/scripts/views/hakemus/seuranta-forms.html
@@ -31,6 +31,34 @@
         <juku-seuranta-liikenne suoritteet="palLiikenneSuoritteet" tyyppi="PAL" is-readonly="!hakemusTallentaminenEnabled()"></juku-seuranta-liikenne>
       </div>
     </accordion-group>
+    <accordion-group is-open="isOpenKAU">
+      <accordion-heading>
+        <div class="panel-heading">
+          <div class="panel-title"><i class="pull-left glyphicon"
+                                      ng-class="{
+                'glyphicon-triangle-bottom':isOpenKAU,
+                'glyphicon-triangle-right': !isOpenKAU
+                }"></i><span>Kaupunkiliput</span></div>
+        </div>
+      </accordion-heading>
+      <div class="panel-body">
+        <juku-seuranta-lippu suoritteet="kaupunkilippuSuoritteet" kaupunkilippu="true" is-readonly="!hakemusTallentaminenEnabled()"></juku-seuranta-lippu>
+      </div>
+    </accordion-group>
+    <accordion-group is-open="isOpenSEU">
+      <accordion-heading>
+        <div class="panel-heading">
+          <div class="panel-title"><i class="pull-left glyphicon"
+                                      ng-class="{
+                'glyphicon-triangle-bottom':isOpenSEU,
+                'glyphicon-triangle-right': !isOpenSEU
+                }"></i><span>Seutulippu</span></div>
+        </div>
+      </accordion-heading>
+      <div class="panel-body">
+        <juku-seuranta-lippu suoritteet="seutulippuSuoritteet" kaupunkilippu="false" is-readonly="!hakemusTallentaminenEnabled()"></juku-seuranta-lippu>
+      </div>
+    </accordion-group>
   </accordion>
 </juku-form-section>
 
