--- a/app/scripts/components/formInput/input-compact.html
+++ b/app/scripts/components/formInput/input-compact.html
@@ -1,4 +1,4 @@
-<div class="form-group" ng-class="{'has-feedback': input().$invalid,
+<div class="form-group" ng-class="{'has-feedback': input().$invalid && feedbackSupport,
                                    'has-error': input().$invalid,
                                    'has-success': input().$valid && input().$dirty}"
      tooltip="{{tooltipText()}}"
@@ -9,7 +9,7 @@
 
   <ng-transclude></ng-transclude>
 
-  <span ng-show="input().$invalid"
+  <span ng-show="input().$invalid && feedbackSupport"
         class="glyphicon glyphicon-warning-sign form-control-feedback"
         aria-hidden="true"></span>
 </div>
