--- a/app/scripts/components/avustuskohde/index.html
+++ b/app/scripts/components/avustuskohde/index.html
@@ -1,5 +1,5 @@
 <div class="row avustuskohde">
-  <ng-form name="{{getName()}}">
+  <ng-form name="{{getName('form')}}">
     <juku-form-row ng-show="hakemustyyppi=='AH0' || (tyyppi!='AH0' && vertailuarvot().avustushakemusHaettavaAvustus>0)">
       <div class="col-md-12">
         <h5>{{name}}</h5>
