--- a/app/scripts/components/seuranta/liikenne/index.html
+++ b/app/scripts/components/seuranta/liikenne/index.html
@@ -146,13 +146,13 @@
             </form-group-compact>
           </td>
           <td>{{laskeBruttohinta($index) | currency}}</td>
-          <td><a href="" ng-click="poistaPaikallisliikenneRivi($index)" ng-hide="isReadonly()"><span
+          <td><a id="{{liikennetyyppi + '-poistasuorite'}}" href="" ng-click="poistaSuorite($index)" ng-hide="isReadonly()"><span
             class="glyphicon glyphicon-remove-sign"></span> Poista</a>
           </td>
         </tr>
       </tbody>
     </table>
 
-    <button id="{{liikennetyyppi + '-lisaarivi'}}" ng-hide="isReadonly()" class="btn btn-primary" ng-click="lisaaSuorite()">Lisää uusi rivi</button>
+    <button id="{{liikennetyyppi + '-lisaasuorite'}}" ng-hide="isReadonly()" class="btn btn-primary" ng-click="lisaaSuorite()">Lisää uusi rivi</button>
   </div>
 </form>
