--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -122,15 +122,22 @@
 
       <!-- Hakija -->
       <juku-form-row
-        ng-show="avustushakemusPaatosOlemassa() && isMaksatushakemus && haettuSummaYliMyonnetyn()"
+        ng-show="avustushakemusPaatosOlemassa() && onMaksatushakemus1() && haettuSummaYliMyonnetyn()"
         class="alert alert-danger">
-        <strong>Virhe! </strong> Haettu avustussumma ({{sumHaettavaAvustus() | currency:"&euro;"}}) ylittää myönnetyn
-        avustuksen. Voit hakea ensimmäisellä maksatushakemuksella enintään 50% vuodelle myönnetystä avustuksesta.
-        Toisen maksatushakemuksen haettava avustussumma ei saa ylittää hakemusajalle myönnettyä summaa (vuodelle
-        myönnetty
-        avustussumma vähennettynä myönnetty avustus ensimmäisen maksatushakemuksen perusteella).
+        <strong>Virhe! </strong>Haettu avustussumma ({{sumHaettavaAvustus() | currency:"&euro;"}}) ylittää ensimmäisellä
+        maksatushakemuksella haettavan suurimman mahdollisen avustussumman ({{myonnettyAvustusPerJakso() | currency:"&euro;"
+        }}). Voit hakea ensimmäisellä maksatushakemuksella enintään 50% vuodelle {{hakemus.vuosi}} myönnetystä
+        avustuksesta ({{myonnettyAvustusPerVuosi() | currency:"&euro;"}}). Toisen maksatushakemuksen
+        haettava avustussumma ei saa ylittää koko vuodelle {{hakemus.vuosi}} myönnettyä summaa
+        ({{myonnettyAvustusPerVuosi() | currency:"&euro;"}} - alkuvuoden hakemuksen perusteella maksettu avustus).
       </juku-form-row>
-
+      <juku-form-row
+        ng-show="avustushakemusPaatosOlemassa() && onMaksatushakemus2() && haettuSummaYliMyonnetyn()"
+        class="alert alert-danger">
+        <strong>Virhe! </strong>Toisen maksatushakemuksen haettava avustussumma ({{sumHaettavaAvustus() | currency:"&euro;"}})
+        ei saa ylittää koko vuodelle {{hakemus.vuosi}} myönnettyä summaa ({{myonnettyAvustusPerVuosi() | currency:"&euro;"}}
+        - alkuvuoden hakemuksen perusteella maksettu avustus).
+      </juku-form-row>
       <juku-form-row
         ng-hide="hakemus.contentvisible"
         class="alert alert-warning">
@@ -201,156 +208,156 @@
 
     <juku-form-section>
 
-    <!-- Hakija (oma hakemus) -->
-    <div ng-show="(isHakija(user) && isOmaHakemus(user)) && hakemus.contentvisible">
-      <juku-form-section ng-show="onAvustushakemus()">
-        <juku-ohje-avustushakemus></juku-ohje-avustushakemus>
-      </juku-form-section>
+      <!-- Hakija (oma hakemus) -->
+      <div ng-show="(isHakija(user) && isOmaHakemus(user)) && hakemus.contentvisible">
+        <juku-form-section ng-show="onAvustushakemus()">
+          <juku-ohje-avustushakemus></juku-ohje-avustushakemus>
+        </juku-form-section>
 
-      <juku-form-section ng-show="onMaksatushakemus1() || onMaksatushakemus2()">
-        <juku-ohje-maksatushakemus></juku-ohje-maksatushakemus>
-      </juku-form-section>
+        <juku-form-section ng-show="onMaksatushakemus1() || onMaksatushakemus2()">
+          <juku-ohje-maksatushakemus></juku-ohje-maksatushakemus>
+        </juku-form-section>
 
-      <juku-form-section>
-        <juku-liite-lataus></juku-liite-lataus>
-      </juku-form-section>
-    </div>
-
-    <!-- Käsittelijä ja Hakija (toisen organisaation hakemus) -->
-    <div ng-show="(!isHakija(user) || (isHakija(user) && !isOmaHakemus(user))) && hakemus.contentvisible">
-      <div ng-show="onAvustushakemus()">
-        <h3>LISÄTIETOJA AVUSTUSTEN KOHTEISTA</h3>
+        <juku-form-section>
+          <juku-liite-lataus></juku-liite-lataus>
+        </juku-form-section>
       </div>
 
-      <div ng-hide="onAvustushakemus()">
-        <h3>KULUTOSITTEET AJALLE {{ajankohta}}{{hakemus.vuosi}}</h3>
+      <!-- Käsittelijä ja Hakija (toisen organisaation hakemus) -->
+      <div ng-show="(!isHakija(user) || (isHakija(user) && !isOmaHakemus(user))) && hakemus.contentvisible">
+        <div ng-show="onAvustushakemus()">
+          <h3>LISÄTIETOJA AVUSTUSTEN KOHTEISTA</h3>
+        </div>
+
+        <div ng-hide="onAvustushakemus()">
+          <h3>KULUTOSITTEET AJALLE {{ajankohta}}{{hakemus.vuosi}}</h3>
+        </div>
+
+        <juku-liite-tarkistaminen></juku-liite-tarkistaminen>
       </div>
 
-      <juku-liite-tarkistaminen></juku-liite-tarkistaminen>
-    </div>
+      <h3>
+        HAKEMUKSEN PÄIVÄMÄÄRÄ JA HAKIJA
+      </h3>
 
-    <h3>
-      HAKEMUKSEN PÄIVÄMÄÄRÄ JA HAKIJA
-    </h3>
+      <div class="row">
+        <div class="col-md-6">
+          <h5>Päivämäärä</h5>
 
-    <div class="row">
-      <div class="col-md-6">
-        <h5>Päivämäärä</h5>
+          <p ng-show="hakemusKeskenerainen() && hakemus.muokkaaja">
+            {{hakemus.muokkausaika | date: 'dd.MM.yyyy' }}
+          </p>
 
-        <p ng-show="hakemusKeskenerainen() && hakemus.muokkaaja">
-          {{hakemus.muokkausaika | date: 'dd.MM.yyyy' }}
-        </p>
+          <p ng-hide="hakemusKeskenerainen()">
+            {{hakemus.lahetysaika |date:'dd.MM.yyyy'}}
+          </p>
+        </div>
+        <div class="col-md-6">
+          <h5 ng-show="hakemusKeskenerainen()">Viimeisin muokkaaja</h5>
+          <h5 ng-hide="hakemusKeskenerainen()">Hakija</h5>
 
-        <p ng-hide="hakemusKeskenerainen()">
-          {{hakemus.lahetysaika |date:'dd.MM.yyyy'}}
-        </p>
+          <p ng-show="hakemusKeskenerainen()">{{hakemus.muokkaaja}}</p>
+
+          <p ng-hide="hakemusKeskenerainen()">{{hakemus.lahettaja}}</p>
+        </div>
       </div>
-      <div class="col-md-6">
-        <h5 ng-show="hakemusKeskenerainen()">Viimeisin muokkaaja</h5>
-        <h5 ng-hide="hakemusKeskenerainen()">Hakija</h5>
-
-        <p ng-show="hakemusKeskenerainen()">{{hakemus.muokkaaja}}</p>
-
-        <p ng-hide="hakemusKeskenerainen()">{{hakemus.lahettaja}}</p>
-      </div>
-    </div>
-
-    <!-- Hakija -->
-    <juku-confirmation
-      ng-show="isHakija(user) && isOmaHakemus(user) && hakemusKeskenerainen()"
-      ng-model="allekirjoitusliitetty"
-      ng-disabled="!hakemusKeskenerainen() || !liitteetOlemassa()">
-      Olen liittänyt hakemukseen tarvittavat lisätiedot mukaanlukien liitteen allekirjoitusoikeudesta.
-    </juku-confirmation>
-
-
-    <!-- Hakija -->
-    <juku-controls ng-show="isHakija(user)">
-      <juku-controls-buttons>
-        <button
-          ng-disabled="!hakemusTallentaminenEnabled()"
-          data-ng-click="tallennaHakemus(lisatoiminto.EI)"
-          class="btn btn-primary disabled-button-tooltip">Tallenna tiedot
-
-          <div tooltip="{{tallentaminenDisabledTooltip()}}" tooltip-placement="bottom"
-               class="disabled-button-tooltip-text"
-               ng-if="!hakemusTallentaminenEnabled()"></div>
-        </button>
-
-        <button data-ng-click="naytaHakemus(hakemus.hakemustilatunnus)" class="btn btn-primary"
-                ng-disabled="!hakemus.contentvisible">
-          {{ hakemusTallentaminenEnabled() ? 'Tallenna ja esikatsele hakemus' : 'Avaa hakemus (PDF)' }}
-        </button>
-
-        <button
-          juku-varmistusdialogi
-          varmistusotsake="Hakemuksen lähettäminen"
-          varmistusteksti="Oletko varma, että haluat lähettää hakemuksen? Hakemuksen lähettämistä ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa lähettämisen jälkeen. Lähetä hakemus painamalla Kyllä-painiketta. Huom! Liitteiden määrästä riippuen, hakemuksen lähettäminen asianhallintaan kestää 10-70 sekuntia."
-
-          operaatio="tallennaHakemus(lisatoiminto.LAHETA)"
-          class="btn btn-success disabled-button-tooltip"
-          ng-disabled="!hakemusLahettaminenEnabled()">Tallenna ja lähetä hakemus
-
-          <div tooltip="{{lahetysDisabledTooltip()}}"
-               class="disabled-button-tooltip-text"
-               ng-if="!hakemusLahettaminenEnabled()"></div>
-        </button>
-      </juku-controls-buttons>
-    </juku-controls>
-
-    <!-- Käsittelijä -->
-    <juku-controls ng-show="sallittu('kasittely-hakemus')">
-      <juku-controls-buttons>
-        <button ng-show="hakemusVireilla()"
-                juku-taydennysdialogi hakemusid="{{hakemusid}}" tyyppi="{{hakemus.hakemustyyppitunnus}}"
-                class="btn btn-danger">
-          Palauta täydennettäväksi
-        </button>
-        <button ng-show="hakemusVireilla()"
-                juku-varmistusdialogi varmistusotsake="Hakemuksen tarkastaminen"
-                varmistusteksti="Oletko varma, että haluat merkitä hakemuksen tarkastetuksi? Hakemuksen tarkastettu-merkintää ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa tarkastamisen jälkeen."
-                operaatio="tarkastaHakemus()"
-                class="btn btn-success">
-          Merkitse tarkastetuksi
-        </button>
-        <button ng-hide="hakemusVireilla()"
-                data-ng-click="taydennyspyynto()"
-                class="btn btn-danger" disabled>
-          Palauta täydennettäväksi
-        </button>
-        <button ng-hide="hakemusVireilla()"
-                data-ng-click="tarkastaHakemus()"
-                class="btn btn-success" disabled>
-          Merkitse tarkastetuksi
-        </button>
-      </juku-controls-buttons>
-    </juku-controls>
-
-    <juku-navigation-links>
-      <!-- Käsittelijä -->
-      <juku-link-prev ng-hide="isHakija(user)" ng-click="backToList()">
-        Palaa hakemusten päänäkymään
-      </juku-link-prev>
 
       <!-- Hakija -->
-      <juku-link-prev ng-show="isHakija(user) && isOmaHakemus(user)" ng-click="backToList()">
-        Palaa omiin hakemuksiin
-      </juku-link-prev>
-      <juku-link-prev ng-show="isHakija(user) && !isOmaHakemus(user)" ng-click="backToList()">
-        Palaa hakemusten päänäkymään
-      </juku-link-prev>
+      <juku-confirmation
+        ng-show="isHakija(user) && isOmaHakemus(user) && hakemusKeskenerainen()"
+        ng-model="allekirjoitusliitetty"
+        ng-disabled="!hakemusKeskenerainen() || !liitteetOlemassa()">
+        Olen liittänyt hakemukseen tarvittavat lisätiedot mukaanlukien liitteen allekirjoitusoikeudesta.
+      </juku-confirmation>
+
+
+      <!-- Hakija -->
+      <juku-controls ng-show="isHakija(user)">
+        <juku-controls-buttons>
+          <button
+            ng-disabled="!hakemusTallentaminenEnabled()"
+            data-ng-click="tallennaHakemus(lisatoiminto.EI)"
+            class="btn btn-primary disabled-button-tooltip">Tallenna tiedot
+
+            <div tooltip="{{tallentaminenDisabledTooltip()}}" tooltip-placement="bottom"
+                 class="disabled-button-tooltip-text"
+                 ng-if="!hakemusTallentaminenEnabled()"></div>
+          </button>
+
+          <button data-ng-click="naytaHakemus(hakemus.hakemustilatunnus)" class="btn btn-primary"
+                  ng-disabled="!hakemus.contentvisible">
+            {{ hakemusTallentaminenEnabled() ? 'Tallenna ja esikatsele hakemus' : 'Avaa hakemus (PDF)' }}
+          </button>
+
+          <button
+            juku-varmistusdialogi
+            varmistusotsake="Hakemuksen lähettäminen"
+            varmistusteksti="Oletko varma, että haluat lähettää hakemuksen? Hakemuksen lähettämistä ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa lähettämisen jälkeen. Lähetä hakemus painamalla Kyllä-painiketta. Huom! Liitteiden määrästä riippuen, hakemuksen lähettäminen asianhallintaan kestää 10-70 sekuntia."
+
+            operaatio="tallennaHakemus(lisatoiminto.LAHETA)"
+            class="btn btn-success disabled-button-tooltip"
+            ng-disabled="!hakemusLahettaminenEnabled()">Tallenna ja lähetä hakemus
+
+            <div tooltip="{{lahetysDisabledTooltip()}}"
+                 class="disabled-button-tooltip-text"
+                 ng-if="!hakemusLahettaminenEnabled()"></div>
+          </button>
+        </juku-controls-buttons>
+      </juku-controls>
 
       <!-- Käsittelijä -->
-      <juku-link-next
-        ng-show="!isHakija(user)"
-        ui-sref="app.kasittelija.suunnittelu({
+      <juku-controls ng-show="sallittu('kasittely-hakemus')">
+        <juku-controls-buttons>
+          <button ng-show="hakemusVireilla()"
+                  juku-taydennysdialogi hakemusid="{{hakemusid}}" tyyppi="{{hakemus.hakemustyyppitunnus}}"
+                  class="btn btn-danger">
+            Palauta täydennettäväksi
+          </button>
+          <button ng-show="hakemusVireilla()"
+                  juku-varmistusdialogi varmistusotsake="Hakemuksen tarkastaminen"
+                  varmistusteksti="Oletko varma, että haluat merkitä hakemuksen tarkastetuksi? Hakemuksen tarkastettu-merkintää ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa tarkastamisen jälkeen."
+                  operaatio="tarkastaHakemus()"
+                  class="btn btn-success">
+            Merkitse tarkastetuksi
+          </button>
+          <button ng-hide="hakemusVireilla()"
+                  data-ng-click="taydennyspyynto()"
+                  class="btn btn-danger" disabled>
+            Palauta täydennettäväksi
+          </button>
+          <button ng-hide="hakemusVireilla()"
+                  data-ng-click="tarkastaHakemus()"
+                  class="btn btn-success" disabled>
+            Merkitse tarkastetuksi
+          </button>
+        </juku-controls-buttons>
+      </juku-controls>
+
+      <juku-navigation-links>
+        <!-- Käsittelijä -->
+        <juku-link-prev ng-hide="isHakija(user)" ng-click="backToList()">
+          Palaa hakemusten päänäkymään
+        </juku-link-prev>
+
+        <!-- Hakija -->
+        <juku-link-prev ng-show="isHakija(user) && isOmaHakemus(user)" ng-click="backToList()">
+          Palaa omiin hakemuksiin
+        </juku-link-prev>
+        <juku-link-prev ng-show="isHakija(user) && !isOmaHakemus(user)" ng-click="backToList()">
+          Palaa hakemusten päänäkymään
+        </juku-link-prev>
+
+        <!-- Käsittelijä -->
+        <juku-link-next
+          ng-show="!isHakija(user)"
+          ui-sref="app.kasittelija.suunnittelu({
             vuosi: hakemus.vuosi,
             tyyppi: hakemus.hakemustyyppitunnus,
             lajitunnus: haeLajitunnus(hakemus.organisaatioid)
           })">
-        Suunnittelu ja päätöksenteko
-      </juku-link-next>
-    </juku-navigation-links>
+          Suunnittelu ja päätöksenteko
+        </juku-link-next>
+      </juku-navigation-links>
     </juku-form-section>
   </juku-form>
 </div>
