Suoritteen poistaminen merkitsee suoriteet-lomakkeen dirtyksi. Huomasin että angularissa lomakkeen nimi ei voi olla dynaaminen tieto vaan sen pitää olla vakioteksti, jos halua julkaista lomakkeen modelcontrollerin scopeen. Laitoin lomakkeen nimeksi suoritteetForm ja lomakkeen id:ksi dynaamisen nimen: liikennetyyppi + '-liikennesuoritteet-form', joka on uniikki koko hakemusnäytöllä. Yleisesti html:ssä useammalla elementillä voi olla sama nimi, mutta id pitää olla uniikki koko html-dokumentissa.

--- a/app/scripts/components/seuranta/liikenne/index.html
+++ b/app/scripts/components/seuranta/liikenne/index.html
@@ -1,4 +1,4 @@
-<form name="{{liikennetyyppi + '-liikennesuoritteet'}}">
+<ng-form id="{{liikennetyyppi + '-liikennesuoritteet-form'}}" name="suoritteetForm">
   <div class="table-responsive">
     <table class="table table-hover table-condensed">
       <tr>
@@ -155,4 +155,4 @@
 
     <button id="{{liikennetyyppi + '-lisaasuorite'}}" ng-hide="isReadonly()" class="btn btn-primary" ng-click="lisaaSuorite()">Lisää uusi rivi</button>
   </div>
-</form>
+</ng-form>
